AX: isNativeCheckbox does not work as advertised https://bugs.webkit.org/show_bug.cgi?id=43872

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/native-vs-nonnative-checkboxes.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isInputImage):
    Only say it's an input image if its role has not been overriden
(WebCore::AccessibilityRenderObject::isNativeCheckboxOrRadio):
* dom/InputElement.h:
    Add methods to query if it's a checkbox or radio button type element.
* html/HTMLInputElement.h:
(WebCore::HTMLInputElement::isCheckbox):

LayoutTests:

* platform/mac/accessibility/native-vs-nonnative-checkboxes-expected.txt: Added.
* platform/mac/accessibility/native-vs-nonnative-checkboxes.html: Added.



Canonical link: https://commits.webkit.org/56004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65204 268f45cc-cd09-0410-ab3c-d52691b4dbfc