WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -508,8 +508,9 @@ bool AccessibilityRenderObject::isFileUploadButton() const
     
 bool AccessibilityRenderObject::isInputImage() const
 {
-    if (m_renderer && m_renderer->node() && m_renderer->node()->hasTagName(inputTag)) {
-        HTMLInputElement* input = static_cast<HTMLInputElement*>(m_renderer->node());
+    Node* elementNode = node();
+    if (roleValue() == ButtonRole && elementNode && elementNode->hasTagName(inputTag)) {
+        HTMLInputElement* input = static_cast<HTMLInputElement*>(elementNode);
         return input->inputType() == HTMLInputElement::IMAGE;
     }
     
@@ -591,8 +592,11 @@ bool AccessibilityRenderObject::isIndeterminate() const
 bool AccessibilityRenderObject::isNativeCheckboxOrRadio() const
 {
     Node* elementNode = node();
-    if (elementNode && elementNode->isElementNode())
-        return toInputElement(static_cast<Element*>(elementNode));
+    if (elementNode && elementNode->isElementNode()) {
+        InputElement* input = toInputElement(static_cast<Element*>(elementNode));
+        if (input)
+            return input->isCheckbox() || input->isRadioButton();
+    }
     
     return false;
 }
