WebCore/dom/InputElement.h
@@ -43,6 +43,9 @@ public:
     virtual bool isPasswordField() const = 0;
     virtual bool isSearchField() const = 0;
     virtual bool isTextField() const = 0;
+    virtual bool isRadioButton() const = 0;
+    virtual bool isCheckbox() const = 0;
+    
     virtual bool supportsMaxLength() const = 0;
     virtual bool hasSpinButton() const { return false; }
 #if ENABLE(INPUT_SPEECH)
